Ctest timeouts + dynamic fixes + travis python fixes
- Set CTest timeout to be 180 for all google-tests
- Fixed dynamic instrumentation tests
- Disabled unity builds in travis
- Disable gotcha in travis gcc-6 tests compiling python

--- a/.travis.yml
+++ b/.travis.yml
@@ -105,7 +105,7 @@ jobs:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=RelWithDebInfo
-        - BUILD_ARGS='--minimal --build-libs shared --gotcha --python --stats --cxx-standard=14'
+        - BUILD_ARGS='--minimal --build-libs shared --python --stats --cxx-standard=14'
     # GCC 7
     - os: linux
       dist: bionic
