Fixed if statement w/ lower-case OR

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(CMAKE_UNITY_BUILD OFF)
-if(NOT DEFINED CTEST_TEST_TIMEOUT or "${CTEST_TEST_TIMEOUT}" STREQUAL "")
+if(NOT DEFINED CTEST_TEST_TIMEOUT OR "${CTEST_TEST_TIMEOUT}" STREQUAL "")
     set(CTEST_TEST_TIMEOUT 180)
 endif()
 
