cache + variadic function + misc
- Find python framework on Apple last
- Disabled python component properties
- More cache tests
- Removed storage type instantiation for iterator from component base
- Separated timing extern component cpp files
- Eliminated generic copy in opaque lambdas
- replaced direct operations with invoke calls in opaque lambdas
- doc updates to timing components
- restructured operation::add_secondary for better extern template instantiation
- improved construct_cache
- variadic invoke functions now accept forwarded tuples of references

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -283,7 +283,8 @@ list(APPEND component_bundle_tests_env "TIMEMORY_MPI_THREAD=OFF")
 
 add_timemory_google_test(traits_tests
     SOURCES         traits_tests.cpp
-    LINK_LIBRARIES  common-test-libs)
+    LINK_LIBRARIES  common-test-libs
+                    ${_LIBRARY})
 
 add_timemory_google_test(component_bundle_tests
     MPI
