--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -69,6 +69,12 @@ message(STATUS "Adding source/tools/timemory-ncclp...")
 add_subdirectory(timemory-ncclp)
 
 #----------------------------------------------------------------------------------------#
+# Build and install timemory-mallocp library
+#
+message(STATUS "Adding source/tools/timemory-mallocp...")
+add_subdirectory(timemory-mallocp)
+
+#----------------------------------------------------------------------------------------#
 # Build and install timemory-connector libraries for kokkos
 #
 message(STATUS "Adding source/tools/kokkos-connector...")
