--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -179,6 +179,8 @@ else:
             stop_ompt,
             start_ncclp,
             stop_ncclp,
+            start_mallocp,
+            stop_mallocp,
             enable_signal_detection,
             disable_signal_detection,
             set_exit_action,
@@ -299,6 +301,8 @@ else:
             "stop_ompt",
             "start_ncclp",
             "stop_ncclp",
+            "start_mallocp",
+            "stop_mallocp",
         ]
 
     except Exception as e:
