--- a/docker/cpu/Dockerfile.dev
+++ b/docker/cpu/Dockerfile.dev
@@ -2,35 +2,9 @@
 FROM spack/ubuntu-bionic:latest as builder
 # FROM ecpe4s/ubuntu18.04-spack-x86_64:0.15.3 as builder
 
-ARG VERSION=develop
-ARG COMPILER_TYPE=gcc
 ARG GCC_VERSION=8
 ARG CLANG_VERSION=11
 ARG ENABLE_DISPLAY=0
-
-# What we want to install and how we want to install it
-# is specified in a manifest file (spack.yaml)
-RUN mkdir /opt/environment \
-    &&  (echo "spack:" \
-    &&   echo "  specs:" \
-    &&   echo "  - papi" \
-    &&   echo "  - mpich" \
-    &&   echo "  - gotcha" \
-    &&   echo "  - dyninst" \
-    &&   echo "  - caliper~papi" \
-    &&   echo "  - gperftools" \
-    &&   echo "  - python" \
-    &&   echo "  - py-numpy" \
-    &&   echo "  - py-cython" \
-    &&   echo "  - py-pillow" \
-    &&   echo "  - py-matplotlib" \
-    &&   echo "  - py-mpi4py" \
-    &&   echo "  - py-pip" \
-    &&   echo "  - timemory@${VERSION} +caliper+dyninst+gotcha+kokkos_tools+kokkos_build_config+mpi+mpip_library+ompt+ompt_library+papi+python+tools" \
-    &&   echo "  concretization: together" \
-    &&   echo "  config:" \
-    &&   echo "    install_tree: /opt/software" \
-    &&   echo "  view: /opt/view") > /opt/environment/spack.yaml
 
 # Install the software, remove unecessary deps
 RUN cd /tmp && \
@@ -45,8 +19,34 @@ RUN cd /tmp && \
     apt-get -y autoclean
 
 COPY ./apt.sh /tmp/apt.sh
-
 RUN cd /tmp && /tmp/apt.sh
+
+ARG COMPILER_SPEC=gcc@9.3.0
+ARG VERSION=develop
+ARG PYTHON_VERSION=3.7
+
+# What we want to install and how we want to install it
+# is specified in a manifest file (spack.yaml)
+RUN mkdir /opt/environment \
+    &&  (echo "spack:" \
+    &&   echo "  specs:" \
+    &&   echo "  - papi" \
+    &&   echo "  - mpich" \
+    &&   echo "  - gotcha" \
+    &&   echo "  - dyninst" \
+    &&   echo "  - caliper~papi" \
+    &&   echo "  - gperftools" \
+    &&   echo "  - python@${PYTHON_VERSION}" \
+    &&   echo "  - py-numpy" \
+    &&   echo "  - py-cython" \
+    &&   echo "  - py-pillow" \
+    &&   echo "  - py-matplotlib" \
+    &&   echo "  - py-mpi4py" \
+    &&   echo "  - py-pip" \
+    &&   echo "  concretization: together" \
+    &&   echo "  config:" \
+    &&   echo "    install_tree: /opt/software" \
+    &&   echo "  view: /opt/view") > /opt/environment/spack.yaml
 
 # Install the software, remove unecessary deps
 RUN cd /opt/environment && \
@@ -54,13 +54,14 @@ RUN cd /opt/environment && \
     spack gpg trust e4s.pub && \
     spack mirror add E4S https://cache.e4s.io/e4s && \
     rm e4s.pub && \
+    spack compiler find && \
     spack external find && \
     spack --env . install && \
-    spack gc -y
+    spack gc -y && \
+    spack clean -a
 
 # Modifications to the environment that are necessary to run
-RUN spack uninstall -y timemory && \
-    cd /opt/environment && \
+RUN cd /opt/environment && \
     spack env activate --sh -d . >> /etc/profile.d/z10_spack_environment.sh
 
 # Bare OS image to run the installed executables
