--- a/docker/gpu/Dockerfile.dev
+++ b/docker/gpu/Dockerfile.dev
@@ -2,11 +2,28 @@
 FROM spack/ubuntu-bionic:latest as builder
 # FROM ecpe4s/ubuntu18.04-spack-x86_64:0.15.3 as builder
 
-ARG VERSION=develop
-ARG COMPILER_TYPE=gcc
 ARG GCC_VERSION=8
 ARG CLANG_VERSION=11
 ARG ENABLE_DISPLAY=0
+
+# Install the software, remove unecessary deps
+RUN cd /tmp && \
+    apt-get update && \
+    apt-get dist-upgrade -y && \
+    apt-get install -y wget gpg software-properties-common && \
+    wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add - && \
+    DISTRIB_CODENAME=$(cat /etc/lsb-release | grep DISTRIB_CODENAME | awk -F '=' '{print $NF}') && \
+    apt-add-repository "deb https://apt.kitware.com/ubuntu/ ${DISTRIB_CODENAME} main" && \
+    apt-get update && \
+    apt-get install -y cmake build-essential ninja-build && \
+    apt-get -y autoclean
+
+COPY ./apt.sh /tmp/apt.sh
+RUN cd /tmp && /tmp/apt.sh
+
+ARG COMPILER_SPEC=gcc@8.4.0
+ARG VERSION=develop
+ARG PYTHON_VERSION=3.7
 ARG CUDA_ARCH=70
 ARG CUDA_ARCH_NAME=volta
 
@@ -23,36 +40,17 @@ RUN mkdir /opt/environment \
     &&   echo "  - dyninst" \
     &&   echo "  - caliper~papi" \
     &&   echo "  - gperftools" \
-    &&   echo "  - python" \
-    &&   echo "  - py-scikit-build" \
+    &&   echo "  - python@${PYTHON_VERSION}" \
     &&   echo "  - py-numpy" \
     &&   echo "  - py-cython" \
     &&   echo "  - py-pillow" \
-    &&   echo "  - py-ipython" \
     &&   echo "  - py-matplotlib" \
     &&   echo "  - py-mpi4py" \
     &&   echo "  - py-pip" \
-    &&   echo "  - timemory+caliper+cuda+cupti+dyninst+gotcha+kokkos_tools+kokkos_build_config+mpi+mpip_library+nccl+ompt+ompt_library+papi+python+tools cuda_arch=${CUDA_ARCH_NAME}" \
     &&   echo "  concretization: together" \
     &&   echo "  config:" \
     &&   echo "    install_tree: /opt/software" \
     &&   echo "  view: /opt/view") > /opt/environment/spack.yaml
-
-# Install the software, remove unecessary deps
-RUN cd /tmp && \
-    apt-get update && \
-    apt-get dist-upgrade -y && \
-    apt-get install -y wget gpg software-properties-common && \
-    wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add - && \
-    DISTRIB_CODENAME=$(cat /etc/lsb-release | grep DISTRIB_CODENAME | awk -F '=' '{print $NF}') && \
-    apt-add-repository "deb https://apt.kitware.com/ubuntu/ ${DISTRIB_CODENAME} main" && \
-    apt-get update && \
-    apt-get install -y cmake build-essential ninja-build && \
-    apt-get -y autoclean
-
-COPY ./apt.sh /tmp/apt.sh
-
-RUN cd /tmp && /tmp/apt.sh
 
 # Install the software, remove unecessary deps
 RUN cd /opt/environment && \
@@ -60,13 +58,14 @@ RUN cd /opt/environment && \
     spack gpg trust e4s.pub && \
     spack mirror add E4S https://cache.e4s.io/e4s && \
     rm e4s.pub && \
+    spack compiler find && \
     spack external find && \
     spack --env . install && \
-    spack gc -y
+    spack gc -y && \
+    spack clean -a
 
 # Modifications to the environment that are necessary to run
-RUN spack uninstall -y timemory && \
-    cd /opt/environment && \
+RUN cd /opt/environment && \
     spack env activate --sh -d . >> /etc/profile.d/z10_spack_environment.sh
 
 # Bare OS image to run the installed executables
