String-view Usage with C++17 (#142)
* implemented std::string_view use when C++17 is enabled

- miscellaneous clean-up of code
- migrated all public inheritance of policy::instance_tracker to private inheritance
- replaced some exceptions with exit(EXIT_FAILURE)

* Reworked variadic bundlers for improved efficiency and consistency

- There appear to be significant reductions in overhead

* hash_result_type -> hash_value_type

- removed deprecated std::hash<>::result_type
- minor fixes to settings

* Update base_bundle.hpp

- Fix for chosen constructor is explicit in copy-initialization error

* Set target_compile_features to match C++ standard

* Test logging and warning fixes

* timemory_init debugging

- added temporary timemory_init debugging to help solve clang-7 issues which cannot be reproduced outside of travis

* settings debugging

* Removed debugging and settings::parse() in manager ctor

- pyctest-runner updates
  - python + quick does not trigger minimal
  - executes script that reports memory usage
- minor update to ex_cxx_overhead to support more warmups

* Fixed storage<>::append(secondary_data) [skip ci] (#140)

* Update pyctest-runner.py

* CI updates

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -129,7 +129,7 @@ add_subdirectory(external)
 
 set(compiler_instr_env "TIMEMORY_SUPPRESS_CONFIG=ON")
 
-if(TARGET timemory::timemory-compiler-instrument-sh)
+if(TARGET timemory::timemory-compiler-instrument-shared)
     add_timemory_google_test(compiler_instrument_shared_tests
         SOURCES         instrumentation_tests.cpp
         DEFINITIONS     DISABLE_TIMEMORY
@@ -280,6 +280,9 @@ endif()
 list(APPEND component_bundle_tests_env "TIMEMORY_COLLAPSE_PROCESSES=OFF")
 list(APPEND component_bundle_tests_env "TIMEMORY_COLLAPSE_THREADS=OFF")
 list(APPEND component_bundle_tests_env "TIMEMORY_MPI_THREAD=OFF")
+list(APPEND component_bundle_tests_env "TIMEMORY_WIDTH=80")
+list(APPEND component_bundle_tests_env "TIMEMORY_PRECISION=6")
+list(APPEND component_bundle_tests_env "TIMEMORY_SCIENTIFIC=ON")
 
 add_timemory_google_test(traits_tests
     SOURCES         traits_tests.cpp
@@ -298,6 +301,12 @@ add_timemory_google_test(component_bundle_tests
 list(APPEND kokkosp_tests_env "TIMEMORY_COLLAPSE_THREADS=ON")
 list(APPEND kokkosp_tests_env "TIMEMORY_NODE_COUNT=1")
 list(APPEND kokkosp_tests_env "TIMEMORY_MPI_THREAD=OFF")
+list(APPEND kokkosp_tests_env "TIMEMORY_TIMING_WIDTH=80")
+list(APPEND kokkosp_tests_env "TIMEMORY_TIMING_PRECISION=6")
+list(APPEND kokkosp_tests_env "TIMEMORY_TIMING_SCIENTIFIC=ON")
+list(APPEND kokkosp_tests_env "TIMEMORY_MEMORY_WIDTH=80")
+list(APPEND kokkosp_tests_env "TIMEMORY_MEMORY_PRECISION=6")
+list(APPEND kokkosp_tests_env "TIMEMORY_MEMORY_SCIENTIFIC=ON")
 
 add_timemory_google_test(kokkosp_tests
     MPI
