--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,6 @@ jobs:
       env:
         - CC=gcc
         - CXX=g++
-        - BUILD_TYPE=Debug
         - BUILD_ARGS='--quick --build-libs shared --tools timem --cxx-standard=17'
     #
     # GCC 8
@@ -46,7 +45,6 @@ jobs:
       env:
         - CC=gcc-8
         - CXX=g++-8
-        - BUILD_TYPE=Debug
         - BUILD_ARGS='--quick --build-libs shared static --python --mpi --tools compiler --cxx-standard=17'
     # Clang 6.0
     - os: linux
@@ -59,12 +57,10 @@ jobs:
             - ubuntu-toolchain-r-test
           packages:
             - clang-6.0
-            - clang++-6.0
             - build-essential
       env:
         - CC=clang-6.0
         - CXX=clang++-6.0
-        - BUILD_TYPE=Debug
         - BUILD_ARGS='--quick --build-libs shared static --stats --tools kokkos-config --cxx-standard=14'
     # Clang 7
     - os: linux
@@ -72,16 +68,17 @@ jobs:
       python: "3.7"
       addons:
         apt:
+          sources:
+            - llvm-toolchain-bionic-7
+            - ubuntu-toolchain-r-test
           packages:
             - clang-7
-            - clang++-7
             - build-essential
             - libmpich-dev
             - mpich
       env:
         - CC=clang-7
         - CXX=clang++-7
-        - BUILD_TYPE=Debug
         - BUILD_ARGS='--quick --build-libs shared static --python --mpi --gotcha --caliper --stats --tools mallocp mpip --cxx-standard=17'
     # ------------------------------------------------------------------------ #
     #
@@ -163,7 +160,6 @@ jobs:
             - ubuntu-toolchain-r-test
           packages:
             - clang-6.0
-            - clang++-6.0
             - build-essential
       env:
         - CC=clang-6.0
@@ -176,9 +172,11 @@ jobs:
       python: "3.7"
       addons:
         apt:
+          sources:
+            - llvm-toolchain-bionic-7
+            - ubuntu-toolchain-r-test
           packages:
             - clang-7
-            - clang++-7
             - build-essential
       env:
         - CC=clang-7
@@ -190,7 +188,7 @@ jobs:
     #
     # ------------------------------------------------------------------------ #
     - os: osx
-      osx_image: xcode12
+      osx_image: xcode11
       language: shell
       env:
         - TRAVIS_PYTHON_VERSION=3.8
@@ -202,6 +200,11 @@ jobs:
 
 before_install:
   # only run macOS if a pull-request
+  - which -a ${CC}
+  - which -a ${CXX}
+  - if [ -f /usr/bin/${CC} ]; then export CC=/usr/bin/${CC}; fi
+  - if [ -f /usr/bin/${CXX} ]; then export CXX=/usr/bin/${CXX}; fi
+  - env
   - export TIMEMORY_SOURCE_DIRECTORY=${PWD}
   - if [[ "$TRAVIS_PULL_REQUEST" != "false" || "${CONDA_OS}" != "MacOSX" ]]; then EXECUTE=1; else EXECUTE=0; fi;
   - if [ -z "${CONDA_OS}" ]; then CONDA_OS=Linux; fi
