Implemented timemory-mallocp for kokkos
- introduced timemory_mallocp_reserve, timemory_mallocp_push, timemory_mallocp_pop, tim::mallocp::region

--- a/source/tools/timemory-mallocp/CMakeLists.txt
+++ b/source/tools/timemory-mallocp/CMakeLists.txt
@@ -7,6 +7,10 @@ endif()
 
 project(timemory-mallocp-tool)
 
+# ---------------------------------------------------------------------------- #
+#   MallocP tool
+# ---------------------------------------------------------------------------- #
+
 add_library(timemory-mallocp-shared SHARED ${PROJECT_SOURCE_DIR}/timemory-mallocp.cpp)
 add_library(timemory::timemory-mallocp-shared ALIAS timemory-mallocp-shared)
 
@@ -31,3 +35,26 @@ set_target_properties(timemory-mallocp-shared PROPERTIES
 # installation
 install(TARGETS timemory-mallocp-shared
     DESTINATION ${CMAKE_INSTALL_LIBDIR})
+
+# ---------------------------------------------------------------------------- #
+#   MallocP KokkosP tool
+# ---------------------------------------------------------------------------- #
+add_library(timemory-mallocp-kokkosp-shared SHARED
+    ${PROJECT_SOURCE_DIR}/timemory-mallocp-kokkosp.cpp)
+add_library(timemory::timemory-mallocp-kokkosp-shared ALIAS
+    timemory-mallocp-kokkosp-shared)
+
+# private link targets
+target_link_libraries(timemory-mallocp-kokkosp-shared PRIVATE
+    timemory::timemory-mallocp-shared)
+
+# use rpath
+set_target_properties(timemory-mallocp-kokkosp-shared PROPERTIES
+    INSTALL_RPATH_USE_LINK_PATH ON
+    OUTPUT_NAME     timemory-mallocp-kokkosp
+    VERSION         ${timemory_VERSION}
+    SOVERSION       ${timemory_VERSION_MAJOR}.${timemory_VERSION_MINOR})
+
+# installation
+install(TARGETS timemory-mallocp-kokkosp-shared
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/kokkos-tools)
