--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -179,8 +179,11 @@ else:
             stop_ompt,
             start_ncclp,
             stop_ncclp,
+            reserve_mallocp,
             start_mallocp,
             stop_mallocp,
+            push_mallocp,
+            pop_mallocp,
             enable_signal_detection,
             disable_signal_detection,
             set_exit_action,
