Reduced the usage of regex to save compile time
- overuse of regex appears to have been a factor in compile time
- updated Caliper submodule to use CALIPER_OPTION_PREFIX
- minor fix to test_tools.py

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -780,7 +780,7 @@ if(TIMEMORY_USE_PYTHON AND PYTHON_EXECUTABLE)
 
     add_test(
         NAME                python_tests
-        COMMAND             ${PYTHON_EXECUTABLE} -m timemory.test
+        COMMAND             ${PYTHON_EXECUTABLE} -m timemory.test -v -v
         WORKING_DIRECTORY   ${PROJECT_BINARY_DIR})
 endif()
 
